--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/css/legend.css' type='text/css' media="screen, projection">
     <link rel='stylesheet' href='/css/syntax.css' type='text/css' media="screen, projection">
     <link rel='stylesheet' href='/css/print.css' type='text/css' media="print">
-    <title>Denis Yarats- {{ page.title }}</title>
+    <title>Denis Yarats - {{ page.title }}</title>
     <!-- mathjax config similar to math.stackexchange -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -42,6 +42,7 @@
         <h1><a href='/'>Denis Yarats</a></h1>
         <ul>
             <li><a href='/'>Home</a></li>
+            <li><a href='/resume'>Resume</a></li>
             <li><a href='/about'>About</a></li>
         </ul>
     </div>
